--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                                     This portfolio
                                 </div>
                                 <button class="slide__link _anim-items">
-                                    <p data-lang="slide__link">link</p>
+                                    <a href="https://m4a1j9.github.io/Portfolio-4.1.1/" data-lang="slide__link0">link</a>
                                 </button>
                             </div>
                         </div>
